src/test/ui/usize-generic-argument-parent.stderr
error[E0109]: const arguments are not allowed for this type
  --> $DIR/usize-generic-argument-parent.rs:2:18
   |
LL |     let x: usize<foo>;
   |                  ^^^ const argument not allowed
   |
help: primitive type `usize` doesn't have type parameters
   |
LL -     let x: usize<foo>;
LL +     let x: usize;
   | 

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
